Ajuste na formatação e alteração nos campos exibidos no template html results

--- a/backend/newsletter/templates/results.html
+++ b/backend/newsletter/templates/results.html
@@ -6,7 +6,7 @@
                 <tr>
                     <td style="width:100px;">
                         <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: justify;color:#212121;  height: 10px; width:570px; padding: 10px; background-color: #F4F4F4;">
-                            Your customized occultation predicitions for {{ date_start }} {{ date_end }}
+                            Your customized occultation predicitions
                         </div>
                     </td>
                 </tr>
@@ -20,7 +20,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: justify;color: rgb(79, 78, 78);  height: 10px; width:570px; padding: 10px; background-color: #F4F4F4;">Dear [Subscriber],
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: justify;color: rgb(79, 78, 78);  height: 10px; width:570px; padding: 10px; background-color: #F4F4F4;">Dear,
                         </div>
                     </td>
                 </tr>
@@ -58,7 +58,7 @@
                                         <tr>
                                             <td>
                                                 <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: left;color:#E5E5E5;  height: 20px;  padding: 10px;border-radius:0px; background-color: #0076BC;">
-                                                    {{filter_name}} - Occultation predictions found
+                                                    Occultation predictions found &nbsp -  &nbsp {{filter_name}}
                                                 </div>
                                             </td>
                                         </tr>
@@ -79,32 +79,30 @@
                 <tr>
                     <td>
                         <div style="text-align: center;color:#212121;  height: 30px; width:100%; padding: 10px; background-color: #F4F4F4;">
-
-                                <table align="center" border="0" cellpadding="1" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255);width:100%;">
-                                    <tbody>
-                                        <tr>
-                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 130px;">
-                                                    Date
-                                            </td>
-                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 35px;">
-                                                    Name
-                                            </td>
-                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
-                                                    Mag
-                                            </td>
-                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
-                                                    Velocity
-                                            </td>
-                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
-                                                    CA
-                                            </td>
-                                            <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 40px;">
-                                                    Download <br> File
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-
+                            <table align="center" border="0" cellpadding="1" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255);width:100%;">
+                                <tbody>
+                                    <tr>
+                                        <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 18%;">
+                                                Date
+                                        </td>
+                                        <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width:16%;">
+                                                Name
+                                        </td>
+                                        <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width:15%;">
+                                                Mag
+                                        </td>
+                                        <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 15%;">
+                                                Velocity
+                                        </td>
+                                        <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width:16%;">
+                                                Closest <br> Approach
+                                        </td>
+                                        <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: center;color:#212121;  height: 20px;  padding: 10px;border-radius:0px; background-color: rgb(255, 255, 255);width: 16%;">
+                                                Gaia Magnitude
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </td>
                 </tr>
@@ -117,21 +115,21 @@
             <tbody>
                 <tr>
                     <td style="width:120px;">
-                        <div style="text-align: center;color:#E5E5E5;  height: 220px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                        <div style="text-align: center;color:#E5E5E5;  height: 86px; width:600px; padding: 10px; background-color: #F4F4F4;">
                              <table align="center" border="1" cellpadding="1" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:rgb(255, 255, 255); height:20px ;width:100%;">
                                     <tbody>
                                         <tr>
-                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 20% ;">
                                                 {% for dates in date %}
                                                     {{dates}}
                                                 {% endfor %}
                                             </td>
-                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 14% ;">
                                                 {% for names in name %}
-                                                    {{names}}
+                                                    {{names}} <br>
                                                 {% endfor %}
                                             </td>
-                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 45px ;">
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 14% ;">
                                                {% for mags in mag %}
                                                     {% if mags != undefined or nan or none %}
                                                         {{mags | floatformat:7}}
@@ -140,22 +138,24 @@
                                                     {% endif %}
                                                 {% endfor %}
                                             </td>
-                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 45px ;">
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 16% ;">
                                                 {% for velocs in veloc %}
                                                     {{velocs}} km/s <br>
                                                 {% endfor %}
                                             </td>
-                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 16% ;">
                                                 {% if closest_approach != nan or none %}
                                                     {% for closest_approachs in closest_approach %}
                                                             {{closest_approachs  | floatformat:4}} s</div>
                                                     {% endfor %}
                                                 {% endif %}
                                             </td>
-                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 40px ;">
-
-                                                    <a style="text-align: left; text-decoration: none;font-size: 11px;" href="{{host}}/archive/newsletter/{{filter_name}}_results_filter_newsletter.csv">Download</a>
-
+                                            <td style="text-align:center ;color:#212121; font-size: 11px;border-color: rgba(0, 0, 0, 0.222); padding-top: 10px;line-height:20px ; width: 16% ;">
+                                                {% if gaia_magnitude != nan or none %}
+                                                    {% for gaia_magnitudes in gaia_magnitude %}
+                                                            {{gaia_magnitudes}} </div>
+                                                    {% endfor %}
+                                                {% endif %}
                                             </td>
                                     </tbody>
                                 </table>
@@ -165,6 +165,26 @@
             </tbody>
         </table>
     </div>
+    <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
+        <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
+            <tbody>
+                <tr>
+                    <td>
+                        <div style="text-align: center;color:#212121;  height: 20px; width:100%; padding: 10px; background-color: #F4F4F4;">
+                            <table align="center" border="0" cellpadding="1" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
+                                <tbody>
+                                    <tr>
+                                        <td style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:11px;font-style:normal;font-weight:bold;text-align: right;color:#212121;  height: 10px;  padding: 10px;border-radius:0px; background-color: #F4F4F4;width: 40px;">
+                                            <a style="text-align: right; text-decoration: none;font-size: 11px;" href="{{host}}/archive/newsletter/{{filter_name}}_results_filter_newsletter.csv">Download File</a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     <!-- paragrafo descadastrar -->
     <div style="background:#F4F4F4;background-color:#F4F4F4;margin:0px auto;max-width:600px;">
         <table align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="background:#F4F4F4;background-color:#F4F4F4;width:100%;">
