--- a/backend/newsletter/templates/results_not_found.html
+++ b/backend/newsletter/templates/results_not_found.html
@@ -5,7 +5,8 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: justify;color:#212121;  height: 10px; width:570px; padding: 10px; background-color: #F4F4F4;">Your customized occultation predicitions for [Semester Year/Month Year/Week Month Year]
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: center;color:#212121;  height: 10px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                            Your customized occultation predicitions for {{filter_name}}
                         </div>
                     </td>
                 </tr>
@@ -19,7 +20,7 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 9px; width:570px; padding: 10px; background-color: #F4F4F4;">Dear [Subscriber],
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 9px; width:570px; padding: 10px; background-color: #F4F4F4;">Dear {{subscriber}},
                         </div>
                     </td>
                 </tr>
@@ -32,8 +33,9 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 120px; width:570px; padding: 10px; background-color: #F4F4F4;">We have found no events with your customized occultation predictions for the upcoming period. Should you wish to adjust your filter parameters, you can do so
-                            <a href="#" style="color:#FB1010; text-decoration: none;"  target="_blank">here.</a><br><br>Yours sincerely,<br>
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 120px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                            We have found no events with your customized occultation predictions for the upcoming period. Should you wish to adjust your filter parameters, you can do so
+                            <a href="{{host}}/newsletter_settings/" style="color:#FB1010; text-decoration: none;"  target="_blank">here.</a><br><br>Yours sincerely,<br>
                             LIneA Team
                         </div>
                     </td>
