--- a/backend/newsletter/templates/welcome.html
+++ b/backend/newsletter/templates/welcome.html
@@ -18,7 +18,8 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: left;color: rgb(79, 78, 78);  height: 40px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">Greetings,
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;font-weight:normal;text-align: left;color: rgb(79, 78, 78);  height: 40px; width:580px; padding: 10px; padding-left: 30px; background-color: #F4F4F4;">
+                            Greetings,
                         </div>
                     </td>
                 </tr>
@@ -32,7 +33,8 @@
             <tbody>
                 <tr>
                     <td style="width:100px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 20px; width:600px; padding: 10px; background-color: #F4F4F4;">Customize your experience with our stellar occultation prediction database!
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: center;color: rgb(79, 78, 78);  height: 20px; width:600px; padding: 10px; background-color: #F4F4F4;">
+                            Customize your experience with our stellar occultation prediction database!
                         </div>
                     </td>
                 </tr>
@@ -45,9 +47,11 @@
             <tbody>
                 <tr>
                     <td style="width:95px;">
-                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">You can choose specific objects, magnitude limits and many other options aligned with your particular interests and geographic location by
-                            <a href="{{host}}/newsletter_settings/" style="color:#FB1010;font-weight: normal; text-decoration: none;" target="_blank">clicking here.</a> <br>
-                            <!--*** Aqui vem print da tela com formulario e instrucoes-->
+                        <div style="font-family:Roboto, Helvetica, Arial, sans-serif;font-size:14px;font-style:normal;text-align: justify;color: rgb(79, 78, 78);  height: 50px; width:570px; padding: 10px; background-color: #F4F4F4;">
+                            You can choose specific objects, magnitude limits and many other options aligned with your particular interests and geographic location by
+                            <a href="{{host}}/newsletter_settings/" style="color:#FB1010;font-weight: normal; text-decoration: none;" target="_blank">
+                                clicking here.
+                            </a> <br>
                         </div>
                     </td>
                 </tr>
